--- a/gmall-core/pom.xml
+++ b/gmall-core/pom.xml
@@ -17,6 +17,7 @@
         <mybatisplus.version>3.0.7.1</mybatisplus.version>
         <mysql.version>5.1.46</mysql.version>
         <swagger.version>2.9.2</swagger.version>
+        <java.version>1.8</java.version>
     </properties>
 
     <dependencies>
